# wb_mpc_humanoid_pythoninterface_walk

./: .gitignore  Makefile  README.md  build_python_module.sh  fix_catkin_permissions.sh  manual_download_mujoco.sh  requirements.txt
humanoid_nmpc/humanoid_wb_mpc/: CMakeLists.txt  package.xml
humanoid_nmpc/humanoid_wb_mpc/include/humanoid_wb_mpc/: WBMpcInterface.h
humanoid_nmpc/humanoid_wb_mpc/include/humanoid_wb_mpc/common/: WBAccelMpcRobotModel.h
humanoid_nmpc/humanoid_wb_mpc/include/humanoid_wb_mpc/mrt/: WBMpcMrtJointController.h
humanoid_nmpc/humanoid_wb_mpc/include/humanoid_wb_mpc/synchronized_module/: MpcWeightAdjustmentModule.h
humanoid_nmpc/humanoid_wb_mpc/python/: RL_MPC_权重训练_阶段性计划.md  RL_MPC_权重训练记录书.md
humanoid_nmpc/humanoid_wb_mpc/python/humanoid_wb_mpc/: __init__.py  bootstrap.py  core.py  sim_interface.py  spaces.py
humanoid_nmpc/humanoid_wb_mpc/python/humanoid_wb_mpc/config/: __init__.py  g1_mpc_rl.py
humanoid_nmpc/humanoid_wb_mpc/python/humanoid_wb_mpc/envs/: G1MpcEnv.py  G1MpcWeightEnv.py  __init__.py
humanoid_nmpc/humanoid_wb_mpc/python/humanoid_wb_mpc/utils/: reward_handler.py
humanoid_nmpc/humanoid_wb_mpc/python/scripts/: analyze_tb_events.py  test_mpc_rl.py  train_g1_ppo_v1 copy.py  train_g1_ppo_v1.py  train_g1_ppo_v1_行走导向.py  train_g1_ppo_v2_站立抗扰动导向.py
humanoid_nmpc/humanoid_wb_mpc/python/scripts/ppo_g1_logs/PPO_1/: events.out.tfevents.1769169830.zlh.135869.0
humanoid_nmpc/humanoid_wb_mpc/python/scripts/ppo_g1_logs/PPO_2/: events.out.tfevents.1769169971.zlh.136630.0
humanoid_nmpc/humanoid_wb_mpc/python/scripts/ppo_g1_logs/PPO_3/: events.out.tfevents.1769170424.zlh.140354.0
humanoid_nmpc/humanoid_wb_mpc/scripts/: README_RL_MPC_WEIGHT_TRAINING.md  README_walk.md  interactive_control.py  test_mpc_PD+G.py  test_mpc_RL_sum.py  test_mpc_mrt_stand.py  test_mpc_mrt_walk.py  train_g1_ppo_v1.py
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/FootCollisionConstraint/cppad_generated/: FootCollisionConstraint_forward_zero.c  FootCollisionConstraint_info.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/dynamics_flow_map/cppad_generated/: dynamics_flow_map_forward_zero.c  dynamics_flow_map_info.c  dynamics_flow_map_sparse_jacobian.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/dynamics_guard_surfaces/cppad_generated/: dynamics_guard_surfaces_info.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/dynamics_jump_map/cppad_generated/: dynamics_jump_map_info.c  dynamics_jump_map_jacobian_sparsity.c  dynamics_jump_map_sparse_jacobian.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_l_contact_TaskSpaceTrackingCost/cppad_generated/: foot_l_contact_TaskSpaceTrackingCost_forward_zero.c  foot_l_contact_TaskSpaceTrackingCost_info.c  foot_l_contact_TaskSpaceTrackingCost_jacobian_sparsity.c  foot_l_contact_TaskSpaceTrackingCost_sparse_jacobian.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_l_contact_accelerations/cppad_generated/: cppad_cg_models.c  foot_l_contact_accelerations_forward_zero.c  foot_l_contact_accelerations_jacobian_sparsity.c  foot_l_contact_accelerations_sparse_jacobian.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_l_contact_angular_acceleration/cppad_generated/: cppad_cg_models.c  foot_l_contact_angular_acceleration_forward_zero.c  foot_l_contact_angular_acceleration_jacobian_sparsity.c  foot_l_contact_angular_acceleration_sparse_jacobian.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_l_contact_angular_velocity/cppad_generated/: foot_l_contact_angular_velocity_info.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_l_contact_contact_moment_XY_constraint/cppad_generated/: foot_l_contact_contact_moment_XY_constraint_atomic_functions.c  foot_l_contact_contact_moment_XY_constraint_forward_zero.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_l_contact_linear_acceleration/cppad_generated/: foot_l_contact_linear_acceleration_atomic_functions.c  foot_l_contact_linear_acceleration_forward_zero.c  foot_l_contact_linear_acceleration_sparse_jacobian.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_l_contact_orientationError/cppad_generated/: cppad_cg_models.c  foot_l_contact_orientationError_forward_zero.c  foot_l_contact_orientationError_sparse_jacobian.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_l_contact_orientation_wrt_plane/cppad_generated/: foot_l_contact_orientation_wrt_plane_atomic_functions.c  foot_l_contact_orientation_wrt_plane_jacobian_sparsity.c  foot_l_contact_orientation_wrt_plane_sparse_jacobian.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_l_contact_twist/cppad_generated/: foot_l_contact_twist_jacobian_sparsity.c  foot_l_contact_twist_sparse_jacobian.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_l_contact_velocity/cppad_generated/: foot_l_contact_velocity_forward_zero.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_r_contact_TaskSpaceTrackingCost/cppad_generated/: cppad_cg_models.c
humanoid_nmpc/humanoid_wb_mpc/scripts/cppad_code_gen/cppad_wb_mpc_g1/foot_r_contact_accelerations/cppad_generated/: cppad_cg_models.c  foot_r_contact_accelerations_atomic_functions.c  foot_r_contact_accelerations_forward_zero.c  (+2 more)
humanoid_nmpc/humanoid_wb_mpc/share/humanoid_wb_mpc/environment/: pythonpath_lib.sh
humanoid_nmpc/humanoid_wb_mpc/share/humanoid_wb_mpc/hook/: pythonpath_lib.dsv
humanoid_nmpc/humanoid_wb_mpc/src/: WBMpcInterface.cpp
humanoid_nmpc/humanoid_wb_mpc/src/command/: WBMpcTargetTrajectoriesCalculator.cpp
humanoid_nmpc/humanoid_wb_mpc/src/dynamics/: WBAccelDynamicsAD.cpp
humanoid_nmpc/humanoid_wb_mpc/src/mrt/: WBMpcMrtJointController.cpp
humanoid_nmpc/humanoid_wb_mpc/src/python/: python_binding.cpp
humanoid_nmpc/humanoid_wb_mpc/src/synchronized_module/: MpcWeightAdjustmentModule.cpp
(+183 files in other folders)
